--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <section class="produtos-container">
     <div class="produto">
       <h2>Fiat Fastback</h2>
-      <img src="../img/fiatfastback.png" alt="Carro Sedan">
+      <img src="fiatfastback.png" alt="Carro Sedan">
       <p>Modelo 2026</p>
       <p class="preco">R$:999,05</p>
       <p>Carro confortável, automático e completo.</p>
@@ -40,7 +40,7 @@
 
     <div class="produto">
       <h2>Chevrolet Tracker</h2>
-      <img src="../img/tracker.png" alt="Carro Sedan">
+      <img src="tracker.png" alt="Carro Sedan">
       <p>Modelo 2025</p>
       <p class="preco">R$:662,25</p>
       <p>Carro confortável, automático e completo.</p>
@@ -49,7 +49,7 @@
 
     <div class="produto">
       <h2>BYD Dolphin</h2>
-      <img src="../img/BYD Dolphin.png" alt="Carro Sedan">
+      <img src="BYD Dolphin.png" alt="Carro Sedan">
       <p>Modelo 2024</p>
       <p class="preco">R$:1.000,00</p>
       <p>Carro confortável e completo.</p>
@@ -58,7 +58,7 @@
 
     <div class="produto">
       <h2>Ford Ranchero</h2>
-      <img src="../img/Ford Ranchero 2022.png" alt="Carro Sedan">
+      <img src="Ford Ranchero 2022.png" alt="Carro Sedan">
       <p>Modelo 2022</p>
       <p class="preco">R$:592,00</p>
       <p>Carro confortável, econômico e completo.</p>
@@ -67,7 +67,7 @@
 
     <div class="produto">
       <h2>Fiat Argo</h2>
-      <img src="../img/fiatargo2025.png" alt="Carro Sedan">
+      <img src="fiatargo2025.png" alt="Carro Sedan">
       <p>Modelo 2025</p>
       <p class="preco">R$:529,75</p>
       <p>Carro confortável, econômico e completo.</p>
@@ -76,7 +76,7 @@
     
     <div class="produto">
       <h2>Fiat Uno</h2>
-      <img src="../img/fiatuno2018.png" alt="Carro Sedan">
+      <img src="fiatuno2018.png" alt="Carro Sedan">
       <p>Modelo 2018</p>
       <p class="preco">R$:399,00</p>
       <p>Carro manual e completo.</p>
@@ -85,7 +85,7 @@
 
     <div class="produto">
       <h2>HB20s hyundai</h2>
-      <img src="../img/hb20s 2025.png" alt="Carro Sedan">
+      <img src="hb20s 2025.png" alt="Carro Sedan">
       <p>Modelo 2025</p>
       <p class="preco">R$:499,75</p>
       <p>Carro confortável, econômico e completo.</p>
@@ -94,7 +94,7 @@
 
     <div class="produto">
       <h2>Sandero Renault</h2>
-      <img src="../img/Sandero 2024.png" alt="Carro Sedan">
+      <img src="Sandero 2024.png" alt="Carro Sedan">
       <p>Modelo 2024</p>
       <p class="preco">R$:700,00</p>
       <p>Carro confortável, manual e completo.</p>
