--- a/pagamento.html
+++ b/pagamento.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="../img/banner.png" alt="Logo Mobilidade Flex" class="logo">
+    <img src="banner.png" alt="Logo Mobilidade Flex" class="logo">
     <h1>Car Center! Locadora de Carros - Pagamento</h1>
     <nav>
       <ul>
