--- a/painel.html
+++ b/painel.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Painel da Frota</title>
   <link rel="stylesheet" href="style.css">
-  <script src="../js/app.js" defer></script>
+  <script src="app.js" defer></script>
   <link rel="shortcut icon" href="logo.png" type="imagem/x-con">
 </head>
 <body>
