--- a/sobre.html
+++ b/sobre.html
@@ -23,19 +23,19 @@ clientes e hoje contamos com uma frota diversificada, preparada para atender des
 
     <div class="equipe-container">
         <div class="membro-equipe">
-            <img src="../img/ana_clara_lima.png" alt="Foto de Ana Clara Lima">
+            <img src="ana_clara_lima.png" alt="Foto de Ana Clara Lima">
             <p>Ana Clara Lima</p>
         </div>
         <div class="membro-equipe">
-            <img src="../img/ivan_salerno.png" alt="Foto de Ivan Salerno">
+            <img src="ivan_salerno.png" alt="Foto de Ivan Salerno">
             <p>Ivan Salerno</p>
         </div>
         <div class="membro-equipe">
-            <img src="../img/isabella_bartu.png" alt="Foto de Isabella Bartu">
+            <img src="isabella_bartu.png" alt="Foto de Isabella Bartu">
             <p>Isabella Bartu</p>
         </div>
         <div class="membro-equipe">
-            <img src="../img/gabriel_das_gracas.png" alt="Foto de Gabriel das Graças">
+            <img src="gabriel_das_gracas.png" alt="Foto de Gabriel das Graças">
             <p>Gabriel das Graças</p>
         </div>
     </div>
